--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>14</source>
+                    <target>14</target>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
