--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "../../../../../node_modules/@angular/cli/lib/config/schema.json",
+  "$schema": "./../../../node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -24,12 +24,12 @@
               "src/assets"
             ],
             "styles": [
-              "../../../../../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              "../../../../../node_modules/jquery/dist/jquery.js",
-              "../../../../../node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
