--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.3.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>angular</artifactId>
+            <version>1.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
