--- a/pom.xml
+++ b/pom.xml
@@ -118,19 +118,36 @@
                 <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <phase>validate</phase>
+                        <id>exec-npm-install</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <workingDirectory>src/main/resources/frontend/angular-app</workingDirectory>
+                            <executable>npm</executable>
+                            <arguments>
+                                <argument>install</argument>
+                            </arguments>
+                        </configuration>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                     </execution>
+
+                <execution>
+                    <id>exec-npm-ng-build</id>
+                    <phase>generate-sources</phase>
+                    <configuration>
+                        <workingDirectory>src/main/resources/frontend/angular-app</workingDirectory>
+                        <executable>ng</executable>
+                        <arguments>
+                            <argument>build</argument>
+                            <argument>--base-href=/ngfirst/ng/</argument>
+                        </arguments>
+                    </configuration>
+                    <goals>
+                        <goal>exec</goal>
+                    </goals>
+                </execution>
                 </executions>
-                <configuration>
-                    <executable>ng</executable>
-                    <workingDirectory>src/main/resources/frontend/angular-app</workingDirectory>
-                    <arguments>
-                        <argument>build</argument>
-                    </arguments>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
